--- a/index.html
+++ b/index.html
@@ -58,28 +58,28 @@
                     <div class="slider">
                         <div class="slide-track justify-center">
                             <div class="slide">
-                                <img src="images/slides/item-ciifen.png" alt="" />
+                                <img src="images/slides/item-ciifen.png" alt="">
                             </div>
                             <div class="slide">
-                                <img src="images/slides/item-diakonia.png"alt="" />
+                                <img src="images/slides/item-diakonia.png" alt="">
                             </div>
                             <div class="slide">
-                                <img src="images/slides/item-ciifen.png" alt="" />
+                                <img src="images/slides/item-ciifen.png" alt="">
                             </div>
                             <div class="slide">
-                                <img src="images/slides/item-diakonia.png"alt="" />
+                                <img src="images/slides/item-diakonia.png" alt="">
                             </div>
                             <div class="slide">
-                                <img src="images/slides/item-ciifen.png" alt="" />
+                                <img src="images/slides/item-ciifen.png" alt="">
                             </div>
                             <div class="slide">
-                                <img src="images/slides/item-diakonia.png"alt="" />
+                                <img src="images/slides/item-diakonia.png" alt="">
                             </div>
                             <div class="slide">
-                                <img src="images/slides/item-ciifen.png" alt="" />
+                                <img src="images/slides/item-ciifen.png" alt="">
                             </div>
                             <div class="slide">
-                                <img src="images/slides/item-diakonia.png"alt="" />
+                                <img src="images/slides/item-diakonia.png" alt="">
                             </div>
                         </div>
                     </div>
