Section without headings needs to be a div

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </div>
             </div>
         </section>
-        <section id="about" class="about-section panel">
+        <div id="about" class="about-section panel">
             <div class="about justify-center items-center flex flex-row content">
                 <div class="photo-bg">
                     <div class="photo flex flex-column justify-center items-center">
@@ -141,7 +141,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
         <section class="container about">
         </section>
         <section class="container about">
