--- a/index.html
+++ b/index.html
@@ -142,9 +142,11 @@
                 </div>
             </div>
         </div>
-        <section class="container about">
+        <section class="container">
+            <h2>EXPERIENCES</h2>
         </section>
-        <section class="container about">
+        <section class="container">
+            <h2>LATEST WORKS</h2>
         </section>
     </div>
     <footer id="footer" class="footer flex flex-column container">
