--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                 </div>
                 <div class="mx-auto"></div>
                 <div class="banner-title flex-column flex">
-                    <h1 class="text-xl name font-poppins">「 Andrés Toala 」</h1>
-                    <h3 class="text-md descr font-lato text-center">Software Engineer & Soccer Enjoyer</h3>
+                    <h2 class="text-xl name font-poppins">「 Andrés Toala 」</h1>
+                    <p class="text-md descr font-lato text-center">Software Engineer & Soccer Enjoyer</p>
                 </div>
             </div>
         </section>
