--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     </div>
                     <div class="music-box font-roboto ">
                         <p class="font-roboto" >Some music and playlists._</p>
-                        <ul style="list-style: disc inside;" class="music-list font-roboto">
+                        <ul class="music-list font-roboto">
                             <li>Tokio - Los Mesoneros</li>
                             <li>Chill Lofi Study Beats</li>
                         </ul>
