--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
                 </div>
             </div>
         </section>
-        <div id="about" class="about-section panel">
-            <div class="about justify-center items-center flex flex-row content">
+        <div id="about" class="about-section fit-content">
+            <div class="about fit-content justify-center items-center flex flex-row content">
                 <div class="photo-bg">
                     <div class="photo flex flex-column justify-center items-center">
-                        <img src="images/photo.png" alt="">
+                        <img src="images/phoo.png" alt="">
                         <ul class="socials-about flex">
                             <li><a class="linknav" href="https://twitter.com/AIToala"  title="Andrés Toala on Twitter">
                                 <svg class="icon" viewBox="0 0 26 28">
@@ -128,7 +128,7 @@
                     </div>
                 </div>
                 <div class="aboutme w-35 text-center font-roboto">
-                    <h1 class="text-lg">About me</h1>
+                    <h2 class="text-lg">About me</h1>
                     <p class="text-justify">I´m from Guayaquil, Ecuador and currently a undergraduate student in Computer Science at ESPOL.
                         <br><br><br>Out of studies and work, you will often find me enjoying soccer, listening music or doodling stuff. I have a lot of interests in life but these are the most valuable for me, also love game soundtracks.</p>
                     <div class="interests flex flex-wrap justify-center text-sm gap-2 ">
@@ -142,11 +142,83 @@
                 </div>
             </div>
         </div>
-        <section class="container">
-            <h2>EXPERIENCES</h2>
-        </section>
-        <section class="container">
-            <h2>LATEST WORKS</h2>
+        <div id="experiences" class="container">
+            <div class="exp-cont flex flex-column items-center">
+                <section>
+                    <h2 class="text-lg">Experiences</h2>
+                    <ul class="box-list">
+                        <li>
+                            <p>INITIATIVE MEDIA BRANDS - MEDIA CENTER</p>
+                            <h3>Internship in Systems</h3>
+                        </li>
+                    </ul>
+                    <h3 class="font-roboto text-important">Looking for more experiences :)</h3>
+                </section>
+                <hr>
+                <section>
+                    <h2 class="text-lg">Education</h2>
+                    <ul class="box-list">
+                        <li>
+                            <p>ESCUELA SUPERIOR POLITECNICA DEL LITORAL</p>
+                            <h3>Computer Science</h3>
+                        </li>
+                        <li>
+                            <p>ACADEMIA NAVAL GUAYAQUIL</p>
+                            <h3>Bachelor of Services in Systems Administration</h3>
+                        </li>
+                    </ul>
+                </section>
+                <hr>
+                <section>
+                    <h2 class="text-lg">Skills</h2>
+                    <div class="skills">
+                        <ul>
+                            <li>
+                                <h3>Frontend</h3>
+                                <p class="score">85%</p>
+                            </li>
+                            <hr>
+                            <li>
+                                <h3>Backend</h3>
+                                <p class="score">72%</p>
+                            </li>
+                            <hr>
+                            <li>
+                                <h3>Python</h3>
+                                <p class="score">93%</p>
+                            </li>
+                            <hr>
+                            <li>
+                                <h3>Java</h3>
+                                <p class="score">91%</p>
+                            </li>
+                            <hr>
+                            <li>
+                                <h3>Motivation</h3>
+                                <p class="score">1000%</p>
+                            </li>
+                            <hr>                    
+                        </ul>
+                        <h3>I like to code and almost spend all night thinking why a div doesn't center :)</h3>
+                        <div class="languages">
+                            <h3>Languages I speak</h3>
+                            <hr>
+                            <ul>
+                                <li>
+                                    <h4>Spanish - Native</h4>
+                                </li>
+                                <li>
+                                    <h4>English - C2</h4>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+
+        <section id="latest-works" class="container">
+            <h2>Latest Works</h2>
         </section>
     </div>
     <footer id="footer" class="footer flex flex-column container">
