--- a/index.html
+++ b/index.html
@@ -196,20 +196,16 @@
                             <li>
                                 <h3>Motivation</h3>
                                 <p class="score">1000%</p>
-                                <hr>                 
+                                <hr class="bg-decor1">                 
                             </li>   
                         </ul>
-                        <h3>I like to code and almost spend all night thinking why a div doesn't center :)</h3>
+                        <h3 class="text-justify">I like to code and almost spend all night thinking why a div doesn't center :)</h3>
                         <div class="languages w-100 items-center flex flex-row">
                             <h3>Languages</h3>
                             <hr>
                             <ul>
-                                <li>
-                                    <h4>Spanish - Native</h4>
-                                </li>
-                                <li>
-                                    <h4>English - C2</h4>
-                                </li>
+                                <li>Spanish - Native</li>
+                                <li>English - C2</li>
                             </ul>
                         </div>
                     </div>
@@ -217,8 +213,32 @@
             </div>
         </div>
 
-        <section id="works" class="container">
-            <h2>Latest Works</h2>
+        <section id="works" class="items-center justify-center text-center container">
+            <h2 class="text-lg">Latest Works</h2>
+            <hr class="bg-secondary line w-50">
+            <div class="works-list">
+                <section class="work">
+                    <p>WEB & MOBILE</p>
+                    <h3>Medical Heart ON</h3>
+                    <div class="work-img">
+                        <img src="images/work1.png" alt="Medical Heart ON">
+                    </div>
+                </section>
+                <section class="work">
+                    <p>DESKTOP APP</p>
+                    <h3>Teammates Data Plotter</h3>
+                    <div class="work-img">
+                        <img src="images/work2.png" alt="Teammates Data Plotter">
+                    </div>
+                </section>
+                <section class="work">
+                    <p>DESKTOP APP</p>
+                    <h3>Online Events - IEvents</h3>
+                    <div class="work-img">
+                        <img src="images/work3.png" alt="IEvents">
+                    </div>
+                </section>
+            </div>
         </section>
     </div>
     <footer id="footer" class="footer flex flex-column container">
