--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <title>AT - Software Engineer</title>
     <!-- Stylesheet-->
     <link rel="stylesheet" type="text/css" href="public/stylesheets/style.css">
-    
 </head>
 <body>
     <div class="bg-lines">
@@ -144,21 +143,7 @@
                                         </svg>
                                     </button>
                                     <script>
-                                        const player = document.getElementById("player");
-                                        var btnPlay = document.getElementById("play");
-                                        var btnStop = document.getElementById("stop");
-                                        btnPlay.onclick = function(){
-                                            player.volume = 0.1;
-                                            player.play();
-                                            btnPlay.style.display = "none";
-                                            btnStop.style.display = "block";
-                                        }
-                                        btnStop.onclick = function(){
-                                            player.pause();
-                                            player.currentTime=0;
-                                            btnStop.style.display = "none";
-                                            btnPlay.style.display = "block";
-                                        }
+                                        
                                     </script>
                                 </div>
                             </li>
@@ -377,5 +362,6 @@
         <hr class="line-footer">
         <p class="font-roboto text-sm">© 2022</p><p>Designed and built by Andrés Toala</p>
     </footer>
+    <script src="public/scripts/main.js"></script>
 </body>
 </html>
