--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                             <td>100%</td>
                         </tr>
                         <tr>
-                            <td><a href="https://open.spotify.com/show/0l6uRgaiOnv8KP8B43bTSM" target="_blank">Anime / Manga / Youtube</a></td>
+                            <td><a href="https://youtu.be/uNjmP-4Dpjs" target="_blank">Anime / Manga / Youtube</a></td>
                             <td>Videos</td>
                             <td>75%</td>
                         </tr>
